--- a/LiveliGoods/LiveliGoods/Info.plist
+++ b/LiveliGoods/LiveliGoods/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIdentifier</key>
+	<string></string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to your photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow access to your camera</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>Please allow access to tracking data</string>
 	<key>NSMotionUsageDescription</key>
